@@ -39,6 +39,7 @@ Release ...
   regular file.
 * Ex does not exit on errors immediately anymore if standard input is not
   a terminal but a pipe or regular file.
+* The 'substitute' ex command can now be abbreviated as 'sub', 'subst' etc.
 
 Release 1/19/05
 * The last release erroneously made 'X' work like 'x' in visual mode. It now
